fix uneven listing of tasks

--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -15,12 +15,15 @@ div.hidden
   display: none;
 }
 
+div#content
+{
+  position: relative;
+}
 
 div#nav {
   border:2px solid #dfd;
   padding:2px;
   float:left;
-  width:150px;
 }
 
 ul#navul
@@ -121,16 +124,16 @@ ul.nobullet {
 
 div#tasks
 {
-  position: relative;
-  top: 25px;
-  left: 35px;
+  position: absolute;
+  top: 5px;
+  left: 200px;
   width: 750px;
 }
 
 ul#tasksul
 {
   margin-left: 0;
-  padding-left: 150px;
+  padding-left: 10px;
 }
 
 li.task
